<resources>
    <string name="app_name">geolocation</string>
    <string name="title_home">Карта</string>
    <string name="title_dashboard">Метки</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_mark">Имя метки</string>
    <string name="annotation">аннотация</string>
    <string name="latitude">широта</string>
    <string name="longitude">долгота</string>
    <string name="delete_mark">Удалить метку</string>
    <string name="save">Save</string>
    <string name="action_sfve">Сохранить</string>
</resources>