<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/cardview_light_background">

    <TextView
        android:id="@+id/title_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:layout_marginStart="8dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/title_mark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/annotation_mark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/annotation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_item"/>
    <TextView
        android:id="@+id/longitude_mark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/longitude"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/annotation_mark"/>
    <TextView
        android:id="@+id/latitude_mark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/latitude"
        app:layout_constraintTop_toBottomOf="@id/annotation_mark"
        app:layout_constraintStart_toEndOf="@id/longitude_mark"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/delete_mark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/title_item"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_baseline_delete_forever_24"
        android:contentDescription="@string/delete_mark" />
</androidx.constraintlayout.widget.ConstraintLayout>